--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         font-size: 70px;
         text-align: center;
       }
+      #explanation {
+        display: block;
+        margin: auto;
+        font-size: 24px;
+		width: 80vw;
+      }
       #review {
         display: block;
         border:8px solid grey;
         margin: auto;
-        font-size: 16px;
-		width: 80%;
+        font-size: 24px;
+		width: 80vw;
       }
       #evaluate {
         margin: auto;
@@ -34,6 +40,7 @@
   </head>
   <body>
     <h1>Review sentiment</h1>
+    <p id="explanation">Write your own book review and have it classified automatically. When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.</p>
     <input type="text" id="review" placeholder="i.e.: This book is amazing!">
     <button id="evaluate">Evaluate</button>
     <script>
