--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <h1>Review sentiment</h1>
-    <p id="explanation">Write your own book review and have it classified automatically. When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.</p>
+    <p id="explanation">Write your own book review and have it classified automatically.<br>When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.<br></p>
     <input type="text" id="review" placeholder="i.e.: This book is amazing!">
     <button id="evaluate">Evaluate</button>
     <script>
