--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
         display: block;
         margin: auto;
         font-size: 24px;
-		width: 80vw;
+	width: 80vw;
       }
       #review {
         display: block;
         border:8px solid grey;
         margin: auto;
+	margin-bottom: 24px;
         font-size: 24px;
-		width: 80vw;
+	width: 80vw;
       }
       #evaluate {
         margin: auto;
         margin-top: 70px;
         padding: 30px;
         text-align: center;
-		font-size: 35px;
+	font-size: 35px;
         display:block;
       }
     </style>
@@ -40,7 +41,7 @@
   </head>
   <body>
     <h1>Review sentiment</h1>
-    <p id="explanation">Write your own book review and have it classified automatically.<br>When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.<br></p>
+    <p id="explanation">Write your own book review and have it classified automatically.<br>When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.</p>
     <input type="text" id="review" placeholder="i.e.: This book is amazing!">
     <button id="evaluate">Evaluate</button>
     <script>
