--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     function predict(input) {
 	  inputArray = textToSequences(input);
       model.predict(tf.tensor2d(inputArray, [1, MAX_LENGTH])).array().then(function(scores){
-        predicted = scores[0] > 0.5;
+        predicted = scores[0] > 0.9401558;
         if (predicted)
 	      review.style.borderColor = 'green';
 	    else
