--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         z-index: 1;
         width: 8vmin;
         height: 8vmin;
-        border: 1vmin solid rgb(255, 255, 255);
+        border: 1vmin solid white;
         border-radius: 50%;
-        border-top: 1vmin solid rgb(238, 136, 34);
+        border-top: 1vmin solid grey;
         animation: spin 1s linear infinite;
+	display: block;
+	margin: auto;
       }
       @keyframes spin {
         0% {
