--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Review sentiment</title>
-    <meta name="description" content="Simple NLP Model with TensorFlow.js">
-    <meta name="keywords" content="Machine Learning, NLP, TensorFlow.js">
-    <meta name="author" content="Daniele Cordano">
+    <meta name="description" content="Simple NLP Model with TensorFlow.js" />
+    <meta name="keywords" content="Machine Learning, NLP, TensorFlow.js" />
+    <meta name="author" content="Daniele Cordano" />
     <style>
       body {
         font-family: "Roboto";
@@ -19,14 +19,14 @@
         margin: auto;
         margin-bottom: 24px;
         font-size: 24px;
-		width: 80vw;
+        width: 80vw;
       }
       #review {
         display: block;
-        border:8px solid grey;
+        border: 8px solid grey;
         margin: auto;
         font-size: 24px;
-		width: 80vw;
+        width: 80vw;
       }
       .loader {
         z-index: 1;
@@ -36,8 +36,9 @@
         border-radius: 50%;
         border-top: 1vmin solid grey;
         animation: spin 1s linear infinite;
-	display: block;
-	margin: auto;
+        display: block;
+        margin: auto;
+        margin-top: 70px;
       }
       @keyframes spin {
         0% {
@@ -47,7 +48,6 @@
           transform: rotate(360deg);
         }
       }
-
       .hide {
         display: none;
       }
@@ -56,83 +56,90 @@
         margin-top: 70px;
         padding: 30px;
         text-align: center;
-		font-size: 35px;
+        font-size: 35px;
         display: none;
       }
     </style>
-	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
   </head>
   <body>
     <h1>Review sentiment</h1>
-    <p id="explanation">Write your own book review and have it classified automatically.<br>When you press the evaluate button, your review will be highlighted in red if negative or in green if positive.</p>
-    <input type="text" id="review" placeholder="i.e.: This book is amazing!">
+    <p id="explanation">
+      Write your own book review and have it classified automatically.<br />When
+      you press the evaluate button, your review will be highlighted in red if
+      negative or in green if positive.
+    </p>
+    <input type="text" id="review" placeholder="i.e.: This book is amazing!" />
     <div id="loader" class="loader"></div>
     <button id="evaluate">Evaluate</button>
     <script>
-    const review = document.getElementById('review');
-    const loader = document.getElementById('loader');
-    const evaluate = document.getElementById('evaluate');
-	const MAX_LENGTH = 120;
-	let wi = [];
-	let model = null;
+      const review = document.getElementById("review");
+      const loader = document.getElementById("loader");
+      const evaluate = document.getElementById("evaluate");
+      const MAX_LENGTH = 120;
+      let wi = [];
+      let model = null;
 
-    evaluate.addEventListener('click', function() {predict(review.value);});
-	review.addEventListener("input", function() {review.style.borderColor = 'grey';});
-	loadFiles();
-	
-	async function loadFiles() {
-	  loadWordIndex(function(response) {
-        wi = JSON.parse(response);
-	  });
-      const MODEL_URL = 'model/model.json';
-      model = await tf.loadLayersModel(MODEL_URL);
-      console.log(model.summary());
-      loader.classList.add('hide');
-      evaluate.style.display = 'block';
-	}
-	
-	function loadWordIndex(callback) {
-      let xobj = new XMLHttpRequest();
-      xobj.overrideMimeType("application/json");
-      xobj.open('GET', 'word_index.json', true);
-      xobj.onreadystatechange = function () {
-          if (xobj.readyState == 4 && xobj.status == "200") {
-              callback(xobj.responseText);
-            }
-      };
-      xobj.send(null);  
-	}
-	
-	function textToSequences(text) {
-      text = text.replace(/(~|`|!|@|#|$|%|^|&|\*|\(|\)|{|}|\[|\]|;|:|\"|'|<|,|\.|>|\?|\/|\\|\||-|_|\+|=)/g,"")
-	  const wordArray = text.toLowerCase().split(' ');
-	  const OOV_SEQ = wi['<OOV>'];
-	  let inputArray = [];
-	  for (let i = 0; i < MAX_LENGTH; i++) {
-	    if (i < wordArray.length) {
-		  let seq = wi[wordArray[i]];
-		  if (seq)
-            inputArray[i] = seq;
-	      else
-		    inputArray[i] = OOV_SEQ;
-		  }
-		else
-		  inputArray[i] = 0;  
-      }
-      return inputArray;
-	}
-	
-    function predict(input) {
-	  inputArray = textToSequences(input);
-      model.predict(tf.tensor2d(inputArray, [1, MAX_LENGTH])).array().then(function(scores){
-        predicted = scores[0] > 0.9401558;
-        if (predicted)
-	      review.style.borderColor = 'green';
-	    else
-	      review.style.borderColor = 'red';
+      evaluate.addEventListener("click", function () {
+        predict(review.value);
+      });
+      review.addEventListener("input", function () {
+        review.style.borderColor = "grey";
+      });
+      loadFiles();
+
+      async function loadFiles() {
+        loadWordIndex(function (response) {
+          wi = JSON.parse(response);
         });
-    }
-	
+        const MODEL_URL = "model/model.json";
+        model = await tf.loadLayersModel(MODEL_URL);
+        console.log(model.summary());
+        loader.classList.add("hide");
+        evaluate.style.display = "block";
+      }
+
+      function loadWordIndex(callback) {
+        let xobj = new XMLHttpRequest();
+        xobj.overrideMimeType("application/json");
+        xobj.open("GET", "word_index.json", true);
+        xobj.onreadystatechange = function () {
+          if (xobj.readyState == 4 && xobj.status == "200") {
+            callback(xobj.responseText);
+          }
+        };
+        xobj.send(null);
+      }
+
+      function textToSequences(text) {
+        text = text.replace(
+          /(~|`|!|@|#|$|%|^|&|\*|\(|\)|{|}|\[|\]|;|:|\"|'|<|,|\.|>|\?|\/|\\|\||-|_|\+|=)/g,
+          ""
+        );
+        const wordArray = text.toLowerCase().split(" ");
+        const OOV_SEQ = wi["<OOV>"];
+        let inputArray = [];
+        for (let i = 0; i < MAX_LENGTH; i++) {
+          if (i < wordArray.length) {
+            let seq = wi[wordArray[i]];
+            if (seq) inputArray[i] = seq;
+            else inputArray[i] = OOV_SEQ;
+          } else inputArray[i] = 0;
+        }
+        return inputArray;
+      }
+
+      function predict(input) {
+        inputArray = textToSequences(input);
+        model
+          .predict(tf.tensor2d(inputArray, [1, MAX_LENGTH]))
+          .array()
+          .then(function (scores) {
+            predicted = scores[0] > 0.9401558;
+            if (predicted) review.style.borderColor = "green";
+            else review.style.borderColor = "red";
+          });
+      }
     </script>
   </body>
 </html>
